Update Chi Square Test.ipynb

--- a/Chi Square Test.ipynb
+++ b/Chi Square Test.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "# In the given SuperStore dataset, are sales of all segments equal?\n",
+    "# In Supermarket file, is the Segment of the orders related to the category?\n",
     "# Null Hypothesis : S1=S2=S3\n",
     "import pandas as pd\n",
     "import scipy.stats as stats\n",
