Update Chi Square Test.ipynb

--- a/Chi Square Test.ipynb
+++ b/Chi Square Test.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "# In Supermarket file, is the Segment of the orders related to the category?\n",
-    "# Null Hypothesis : S1=S2=S3\n",
+    "# Null Hypothesis : are related. \n",
     "import pandas as pd\n",
     "import scipy.stats as stats\n",
     "import math\n",
